syntax = "proto3";

package node.v1;

import "google/api/annotations.proto";

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = ".;node";

// Service definition for StoreVaultService
service StoreVaultService {
  // BackupTransfer processes a request for data backup transfer
  //
  // ## This method handles the transfer of backup data.
  rpc BackupTransfer(BackupTransferRequest) returns (BackupTransferResponse) {
    option (google.api.http) = {
      post: "/v1/backups/transfer"
      body: "*"
    };
  }

  // BackupTransaction processes a request for data backup transaction
  //
  // ## This method handles the transaction of backup data.
  rpc BackupTransaction(BackupTransactionRequest) returns (BackupTransactionResponse) {
    option (google.api.http) = {
      post: "/v1/backups/transaction"
      body: "*"
    };
  }

  // BackupDeposit processes a request for data backup deposit
  //
  // ## This method handles the deposit of backup data.
  rpc BackupDeposit(BackupDepositRequest) returns (BackupDepositResponse) {
    option (google.api.http) = {
      post: "/v1/backups/deposit"
      body: "*"
    };
  }

  // GetBalances retrieves balances for a given address
  //
  // ## This method retrieves the balance for the provided address.
  rpc GetBalances(GetBalancesRequest) returns (GetBalancesResponse) {
    option (google.api.http) = {
      get: "/v1/balances/{address}"
    };
  }
}

// BackupTransferRequest is the request message for BackupTransfer method.
message BackupTransferRequest {
  // The encrypted data for the transfer
  string encrypted_transfer = 1;
  // The recipient address
  string recipient = 2;
  // The block number associated with the transfer
  uint64 block_number = 3;
}

// BackupTransferResponse is the response message for Backup method.
message BackupTransferResponse {
  // Indicates if the backup transfer was successful
  bool success = 1;
  // Additional data related to the response
  Data data = 2;
  // Data is the nested message containing detailed response information
  message Data {
    // A message indicating the result of the backup transfer
    string message = 1;
  }
}

// BackupTransactionRequest is the request message for BackupTransaction method.
message BackupTransactionRequest {
  // The encrypted transaction data
  string encrypted_tx = 1;
  // The sender address
  string sender = 2;
  // The block number associated with the transaction
  uint64 block_number = 3;
  // The signature for the transaction
  string signature = 4;
}

// BackupTransactionResponse is the response message for Backup method.
message BackupTransactionResponse {
  // Indicates if the backup transfer was successful
  bool success = 1;
  // Additional data related to the response
  Data data = 2;
  // Data is the nested message containing detailed response information
  message Data {
    // A message indicating the result of the backup transfer
    string message = 1;
  }
}

// BackupDepositRequest is the request message for BackupDeposit method.
message BackupDepositRequest {
  // The recipient address
  string recipient = 1;
  // The encrypted deposit data
  string encrypted_deposit = 2;
  // The block number associated with the deposit
  uint64 block_number = 3;
}

// BackupDepositResponse is the response message for Backup method.
message BackupDepositResponse {
  // Indicates if the backup transfer was successful
  bool success = 1;
  // Additional data related to the response
  Data data = 2;
  // Data is the nested message containing detailed response information
  message Data {
    // A message indicating the result of the backup transfer
    string message = 1;
  }
}

// GetBalanceRequest is the request message for GetBalances method.
message GetBalancesRequest {
  // The address to retrieve the balance for
  string address = 1;
}

message BackupDeposit {
  string recipient = 1;
  string encrypted_deposit = 2;
  uint64 block_number = 3;
  string created_at = 4;
}

message BackupTransfer {
  string encrypted_transfer = 1;
  string recipient = 2;
  uint64 block_number = 3;
  string created_at = 4;
}

message BackupTransaction {
	string sender = 1;
	string encrypted_tx = 2;
	string block_number = 3;
	string created_at = 4;
}

// The response message containing a list of token balances.
message GetBalancesResponse {
  // The list of deposits
  repeated BackupDeposit deposits = 1;
  // The list of transfers
  repeated BackupTransfer transfers = 2;
  // The list of transactions
  repeated BackupTransaction transactions = 3;
}
